fix: z-index for modal

--- a/src/sass/layouts/_modal-wrapper.scss
+++ b/src/sass/layouts/_modal-wrapper.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  z-index: 100;
   left: 0;
   top: 0;
   background-color: rgba($color: #000000, $alpha: 0.5);
